# global-hotkeys

./: Cargo.toml
examples/: event.rs  events.rs  windows.rs
src/: lib.rs  windows.rs
