[package]
name = "global_hotkeys"
version = "0.0.1"
edition = "2021"

authors = ["Bay"]
description = "Global hotkeys"
repository = "https://github.com/zX3no/global-hotkeys"
readme = "README.md"
license = "MIT"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }